[project]
name = "gargula"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "openai-whisper>=20250625",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "sentence-transformers>=5.2.3",
    "sqlmodel>=0.0.37",
]

[tool.uv]
package = true
